# riskpremia

./: .gitattributes  .gitignore  CHANGELOG.md  HANDOFF-PROMPT.md  LICENSE  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: btc_eth_trend_gate.json  ctrend_gate.json  ctrend_signal.json  ctrend_universe.json  funding_dispersion.json  indtrend_gate.json  quality_gate.json  volmanaged_factor_asymmetry.json  volmanaged_gate.json  vrp_measurement.json  vrp_short_variance_gate.json  xtrend_gate.json
data/snapshots/: manifest.toml
docs/: STRATEGY-BRIEF.md
docs/decisions/: 0001-lead-track-selection.md  0002-data-layer-funding-clock.md  0003-cost-model-and-null.md  0004-pivot-to-variance-risk-premium.md  0005-pivot-to-ctrend-trend-factor.md  0006-pivot-to-btc-eth-slow-trend.md  0007-kill-cme-micro-g6-fx-carry.md  0008-pivot-to-cross-asset-defensive-trend.md  0009-pivot-to-funding-dispersion-measurement.md  0010-pivot-to-volatility-managed-equity.md  0011-pivot-to-industry-trend-net-of-market.md  0012-pivot-to-quality-tilt.md
docs/deployment/: study6-live-runbook.md
docs/research/: 0001-data-layer-design.md  0002-ctrend-universe-design.md  0003-ctrend-signal-design.md  0004-ctrend-gate-design.md  0005-btc-eth-trend-gate-design.md  0006-g10-micro-fx-feasibility.md  0007-cross-asset-trend-feasibility.md  0008-cross-asset-trend-gate-design.md  0009-funding-dispersion-measurement-design.md  0010-funding-dispersion-measurement-result.md  0011-volatility-managed-equity-design.md  0012-volatility-managed-equity-result.md  0013-industry-trend-net-of-market-design.md  0014-industry-trend-net-of-market-result.md  0015-quality-tilt-design.md  0016-quality-tilt-result.md  0017-portfolio-thesis.md
scripts/: __init__.py  build_btc_eth_trend_inputs.py  build_ctrend_signal.py  build_ctrend_universe.py  build_dispersion_inputs.py  build_indtrend_inputs.py  build_live_levels.py  build_quality_inputs.py  build_volmanaged_factor_inputs.py  build_vrp_artifact.py  build_vrp_entries.py  build_xtrend_inputs.py  live_signal.py  paper_rebalance.py  regenerate_dispersion_figures.py  regenerate_figures.py  regenerate_indtrend_figures.py  regenerate_quality_figures.py  regenerate_volmanaged_figures.py  regenerate_xtrend_figures.py  run_btc_eth_trend_gate.py  run_ctrend_gate.py  run_dispersion_measurement.py  run_indtrend_gate.py  run_null_gate.py  run_quality_gate.py  run_volmanaged_factor_asymmetry.py  run_volmanaged_gate.py  run_vrp_gate.py  run_xtrend_gate.py
src/riskpremia/: __init__.py
src/riskpremia/analytics/: __init__.py  bootstrap.py  sharpe.py
src/riskpremia/ctrend/: __init__.py  artifact.py  errors.py  features.py  fixtures.py  gate.py  signal.py  signal_artifact.py  universe.py
src/riskpremia/data/: __init__.py  boundary.py  clock.py  cross_venue.py  errors.py  manifest.py  records.py
src/riskpremia/data/sources/: __init__.py  base.py  binance_vision.py  deribit_dvol.py  ken_french.py  okx.py  tardis_options.py  treasury.py
src/riskpremia/dispersion/: __init__.py  artifact.py  errors.py  figures.py  fixtures.py  measure.py
src/riskpremia/execution/: __init__.py  carry.py  cost.py  errors.py  exhibit.py  options.py  scoring.py
src/riskpremia/indtrend/: __init__.py  errors.py  figures.py  fixtures.py  gate.py
src/riskpremia/live/: __init__.py  errors.py  journal.py  levels.py  paper.py  signal.py
src/riskpremia/quality/: __init__.py  errors.py  figures.py  fixtures.py  gate.py
src/riskpremia/strategy/: __init__.py  null.py
src/riskpremia/trend/: __init__.py  errors.py  fixtures.py  gate.py
src/riskpremia/validation/: __init__.py  cv.py  trial_registry.py
src/riskpremia/volmanaged/: __init__.py  errors.py  factors.py  figures.py  gate.py  measure.py
src/riskpremia/vrp/: __init__.py  artifact.py  errors.py  figures.py  fixtures.py  gate.py  measurement.py  realized.py
src/riskpremia/xtrend/: __init__.py  bonds.py  errors.py  figures.py  fixtures.py  gate.py
tests/data/: BTCUSDT-fundingRate-2020-01-sample.csv  BTCUSDT-fundingRate-2020-01.zip.CHECKSUM  binance_spot_btcusdt_1d.csv  btc_eth_daily_ohlc.csv  btc_eth_daily_ohlc_sources.json  deribit_dvol_btc.csv  funding_dispersion_series.csv  funding_dispersion_sources.json  indtrend_panel.csv  indtrend_panel_sources.json  live_levels_seed.csv  quality_panel.csv  quality_panel_sources.json  s3_listing_btcusdt_funding.xml  tardis_deribit_options_sample.csv  volmanaged_factor_panel.csv  volmanaged_factor_sources.json  vrp_straddle_entries.csv  xtrend_panel.csv  xtrend_panel_sources.json
tests/integration/: test_binance_vision_network.py  test_carry_real_data_network.py  test_ctrend_universe_network.py  test_deribit_dvol_network.py  test_okx_network.py  test_option_cost_network.py  test_tardis_options_network.py  test_xtrend_network.py
tests/unit/: test_binance_vision.py  test_boundary_parse.py  test_clock_and_horizons.py  test_cost_model.py  test_cpcv_contract.py  test_cross_venue.py  test_ctrend_features.py  test_ctrend_fixtures.py  test_ctrend_gate.py  test_ctrend_gate_reproduces.py  test_ctrend_signal.py  test_ctrend_signal_reproduces.py  test_ctrend_universe.py  test_ctrend_universe_reproduces.py  test_deribit_dvol.py  test_dispersion_figures.py  test_dispersion_measure.py  test_dispersion_reproduces.py  test_execution_carry.py  test_indtrend_figures.py  test_indtrend_measure.py  test_indtrend_reproduces.py  test_live_io.py  test_live_paper.py  test_live_signal.py  test_manifest.py  test_null_gate.py  test_okx.py  test_option_cost_model.py  test_option_trade_pnl.py  test_pydantic_boundary_lint.py  test_quality_figures.py  test_quality_measure.py  test_quality_reproduces.py  test_records.py  test_tardis_options.py  test_trend_fixtures.py  test_trend_gate.py  test_trend_gate_reproduces.py  test_vendored_stack.py  (+16 more)
