[project]
name = "riskpremia"
version = "0.0.0"
description = "A reproducible, intellectually-honest measurement study of a risk premium, sibling to pit-backtest. Lead track: crypto perpetual-futures funding carry (delta-neutral), framed as a measurement study (does the carry survive fees, the two-leg spread, regime gating, and the post-spot-ETF decay)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Sam Doane" }]

# Dependencies are pinned to exact patch per the determinism invariant
# inherited from the sibling pit-backtest (docs/methodology/determinism.md
# there). The shared analytics + validation stack is vendored under
# src/riskpremia/analytics and src/riskpremia/validation (copied and
# attributed, see those modules' headers), so its numeric behaviour is
# reproduced bit-for-bit only when polars/numpy match the source project's
# pins. Bumping any pin is an explicit change requiring a re-run of the
# golden reconciliation and a recorded delta in the PR description.
dependencies = [
    "polars==1.41.1",
    "numpy==1.26.4",
    "pydantic==2.9.2",
    "attrs==24.2.0",
    # tzdata supplies the IANA tz database that Python's stdlib zoneinfo lacks on
    # Windows; polars needs it to resolve the "UTC" tz string when materializing
    # the tz-aware funding-event timestamps (without it, to_list() panics with
    # ZoneInfoNotFoundError). The event clock is always UTC, so the tz-rule
    # version is immaterial to results; pinned for reproducibility regardless.
    "tzdata==2026.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-env==1.1.5",
    "mypy==1.13.0",
    "ruff==0.7.4",
]
# Exchange / market-data fetching. httpx is data-ingest-only: the on-disk
# raw snapshot SHA256 is what determinism gates on, not the in-memory HTTP
# path, so the pin is exact-but-not-determinism-critical. The Binance Vision
# historical dumps are fetched and unzipped with the stdlib (urllib/zipfile),
# so the long-history reproducible path has zero third-party surface.
dataops = [
    "httpx==0.27.2",
]
figures = [
    # matplotlib is render-only: it produces the committed figures from the
    # study artifact and is NEVER imported by the cost model or the backtest
    # path. Loose pin (nothing determinism-critical depends on the plotting
    # version; the artifact JSON, not the PNG bytes, is the audited contract).
    "matplotlib>=3.8,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/riskpremia"]

[tool.mypy]
# mypy strict mode, inherited from pit-backtest ADR 0001 decision 19. Every
# public function and class is fully typed; no implicit Any.
strict = true
python_version = "3.11"
files = ["src/riskpremia"]
exclude = ["tests/"]
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
# matplotlib is an optional, render-only dependency imported lazily inside the
# figure scripts (guarded), ships no type information, and is import-not-found
# whenever the figures extra is absent. Ignoring its missing imports keeps
# `mypy src/riskpremia` green regardless of whether the plotting dep is present.
module = ["matplotlib.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# PYTHONHASHSEED=0 inherited from pit-backtest determinism Requirement 4 (no
# set iteration). Pinning the hash seed makes any accidental set iteration
# deterministic locally and in CI, surfacing violations consistently.
env = [
    "PYTHONHASHSEED=0",
]
markers = [
    "kill_gate: tests that gate the pre-registered kill criterion; failure ends the study per the kill-early rule",
    "network: tests that hit a live exchange endpoint; skipped by default (run explicitly with -m network)",
    "snapshot: tests that require a committed raw data snapshot; skipped when absent",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:polars",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
